feat: auth "working"
